# csgjs-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  checkimpl.cpp  csgjs.h  main.cpp  mycsgjs.h  test_csgjscpp.cpp
tp/: CMakeLists.txt
